src/objects/CQT_Analysis__c.object
<CustomObject>
    <fields>
        <fullName>Acidity__c</fullName>
        <label>Acidity</label>
        <picklist>
            <picklistValues>
                <fullName>6.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AfterTaste__c</fullName>
        <label>After Taste</label>
        <picklist>
            <picklistValues>
                <fullName>6.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <picklist>
            <picklistValues>
                <fullName>6.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <picklist>
            <picklistValues>
                <fullName>6.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Break__c</fullName>
        <label>Break</label>
        <picklist>
            <picklistValues>
                <fullName>6.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CleanCup__c</fullName>
        <label>Clean Cup</label>
        <picklist>
            <picklistValues>
                <fullName>1 Taza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Tazas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Tazas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Tazas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Tazas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CoffeeSample__c</fullName>
        <label>CoffeeSample</label>
        <referenceTo>CQT_CoffeeSample__c</referenceTo>
        <relationshipLabel>CQT_Analysis</relationshipLabel>
        <relationshipName>CQT_Analysis</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dry__c</fullName>
        <description>Seco</description>
        <label>Dry</label>
        <picklist>
            <picklistValues>
                <fullName>6.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flavor__c</fullName>
        <label>Flavor</label>
        <picklist>
            <picklistValues>
                <fullName>6.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FraganceAroma__c</fullName>
        <description>Fragancia/Aroma</description>
        <label>Fragance/Aroma</label>
        <picklist>
            <picklistValues>
                <fullName>6.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IntensityDefect__c</fullName>
        <label>Intensity Defect</label>
        <picklist>
            <picklistValues>
                <fullName>Ligero=2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rechazo=4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Intensity__c</fullName>
        <label>Intensity</label>
        <picklist>
            <picklistValues>
                <fullName>Alto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medio-Alto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medio-Bajo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bajo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Alto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medio-Alto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medio-Bajo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bajo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overall__c</fullName>
        <label>Overall</label>
        <picklist>
            <picklistValues>
                <fullName>6.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualities__c</fullName>
        <description>Cualidades</description>
        <label>Qualities</label>
        <picklist>
            <picklistValues>
                <fullName>Mora</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frutoso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caramelo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resinoso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limón</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toronja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mantequilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chocolate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picante</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terroso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carbón</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vainilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pellejo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mohoso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pimienta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tostada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humo</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RoastLevelOfSample__c</fullName>
        <description>Nivel de Muestra</description>
        <label>Roast level of sample</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <label>Session</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sweetness__c</fullName>
        <description>Dulzor</description>
        <label>Sweetness</label>
        <picklist>
            <picklistValues>
                <fullName>1 Taza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Tazas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Tazas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Tazas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Tazas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Taster__c</fullName>
        <label>Taster</label>
        <referenceTo>CQT_Taster__c</referenceTo>
        <relationshipLabel>CQT_Analysis_Taster</relationshipLabel>
        <relationshipName>CQT_Analysis_Taster</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalDefects__c</fullName>
        <label>TotalDefects</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalScore__c</fullName>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uniformity__c</fullName>
        <label>Uniformity</label>
        <picklist>
            <picklistValues>
                <fullName>1 Taza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Tazas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Tazas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Tazas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Tazas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CQT_Analysis</label>
    <nameField>
        <displayFormat>CQA-{00000}</displayFormat>
        <label>CQT_Analysis Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CQT_Analysis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>